# gaze

./: .gitignore  PREPROCESSING_PIPELINE.md  README_LANDMARK_LOGGING.md  analyze_landmark_jitter.py  build.gradle  dep.txt
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  qnn_model_runner.cpp
app/src/main/cpp/include/QNN/: QnnCommon.h  QnnContext.h  QnnInterface.h  QnnProperty.h  QnnSdkBuildId.h  QnnTypes.h
app/src/main/cpp/include/QNN/GPGPU/: QnnGpGpuCommon.h  QnnGpGpuContext.h
app/src/main/cpp/include/QNN/GPU/: QnnGpuBackend.h  QnnGpuCommon.h  QnnGpuOpPackage.h
app/src/main/cpp/include/QNN/HTP/: QnnHtpCommon.h  QnnHtpGraph.h
app/src/main/cpp/include/QNN/HTP/core/: bfloat16.h  constraints.h  dtype.h  intrinsics.h  optimize.h
app/src/main/cpp/include/QNN/HTPMCP/: QnnHtpMcpCommon.h  QnnHtpMcpContext.h  QnnHtpMcpDevice.h  QnnHtpMcpGraph.h  QnnHtpMcpProfile.h
app/src/main/cpp/include/QNN/HTPMCP/core/: op_def.h  optimize_defs.h  typical_op.h
app/src/main/cpp/include/QNN/HTPQEMU/: QnnHtpQemuCommon.h
app/src/main/cpp/include/QNN/IR/: QnnIrGraph.h
app/src/main/cpp/include/QNN/LPAI/: QnnLpaiBackend.h  QnnLpaiCommon.h  QnnLpaiGraphPrepare.h
app/src/main/cpp/include/QNN/System/: QnnSystemCommon.h  QnnSystemProfile.h
gradle/wrapper/: gradle-wrapper.properties
ml_model/: README.md  requirements.txt  scaler_params.json  train_model_v2.py
ml_model/data/: looking.csv  notlooking.csv
models/: landmark_detection.dlc
opencv/: build.gradle
opencv/native/jni/: android.toolchain.cmake
(+40 files in other folders)
